Bug 513882 - Duplicate investment transactions don't get focused
Summary: Duplicate investment transactions don't get focused
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-27 17:06 UTC by Musikolo
Modified: 2025-12-29 07:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Musikolo 2025-12-27 17:06:45 UTC
SUMMARY
When you duplicate a transaction in a checking account, the new transaction gets focused, and you can press E to edit it. This provides a nice, convenient experience because you can interact directly with the new transaction. However, when you do this in an investment account, the new transaction isn’t focused, which is inconvenient since you have to locate it manually to edit it.

STEPS TO REPRODUCE
1. Go to an investment account.
2. Select a transaction and duplicate it (context menu or shortcut).
3. The new transaction gets added with today's date.

OBSERVED RESULT
- The new transactions isn't focused, preventing direct interaction with it.

EXPECTED RESULT
- Same as it does with checking accounts, the new transaction should be focused, allowing direct interaction with it.

SOFTWARE/OS VERSIONS
- Linux/KDE Plasma: 6.5.4
- KDE Plasma Version: 6.5.4
- KDE Frameworks Version: 6.21.0
- Qt Version: 6.10.1

ADDITIONAL INFORMATION
- Kernel version: 6.18.2-arch2-1 (64-bit)
- Graphics Platform: Wayland
Comment 1 Thomas Baumgart 2025-12-28 16:28:56 UTC
Git commit 0089fd5da4251a116c269df15889ec33480b0c31 by Thomas Baumgart.
Committed on 28/12/2025 at 16:28.
Pushed by tbaumgart into branch 'master'.

Select new investment transaction created by duplication
FIXED-IN: 5.2.2

M  +6    -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/0089fd5da4251a116c269df15889ec33480b0c31
Comment 2 Thomas Baumgart 2025-12-29 07:06:34 UTC
Git commit 01ceaa6a5e7e7ad35b7d00ce39fcb9d89cd04842 by Thomas Baumgart.
Committed on 29/12/2025 at 06:52.
Pushed by tbaumgart into branch '5.2'.

Select new investment transaction created by duplication
FIXED-IN: 5.2.2
(cherry picked from commit 0089fd5da4251a116c269df15889ec33480b0c31)

M  +6    -1    kmymoney/kmymoney.cpp

https://invent.kde.org/office/kmymoney/-/commit/01ceaa6a5e7e7ad35b7d00ce39fcb9d89cd04842