Select new investment transaction created by duplication

BUG: 513882
FIXED-IN: 5.2.2
(cherry picked from commit 0089fd5da4251a116c269df15889ec33480b0c31)